# skillrouter-test

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  skills_catalog.json  test_queries.txt
scripts/: fetch_models.sh
src/skillrouter_test/: __init__.py  cli.py  models.py  sample_data.py
